# DeepPaperNote-mineru

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/: note_template.md
references/: data-mining-ai-note-format.md  final-writing.md  obsidian-format.md
scripts/: common.py  contracts.py  extract_evidence.py  extract_pdf_assets.py  extract_source_text.py  lint_note.py  mineru_v4.py  run_pipeline.py
tests/: test_cli_fallback.py  test_common.py
